Fixed layout problems,
Remove sidebar from the log in page
Reorganize layout
Remove container class modification in board.css file
Remove some customs styles

--- a/public/css/content.css
+++ b/public/css/content.css
@@ -1,8 +1,7 @@
 /* Content */
 #content {
   background: none repeat scroll 0 0 #eceaf3;
-  margin-left: 220px;
-  margin-right: 0;
+  
   /*margin-top: -39px;*/
   position: relative;
   min-height: 500px;
